# vllm-hpu-extension

./: .pre-commit-config.yaml  README.md  mkdocs.yaml  pyproject.toml  requirements-docs.txt  requirements.txt  setup.py
.github/: CODEOWNERS  dependabot.yml
calibration/: README.md  calibrate_model.sh  deepseek-r1-distill-llama-70b-calibration-dataset.pkl  expand-mm.py  requirements.txt  run_inc_calib.sh  step-1-prepare-calibration-dataset.py  step-2-measure-scales.py  step-3-postprocess-measure.py  step-3-postprocess_measure.py  step-4-quantize-scales.py  step-5-unify_measurements.py  step-6-expand-measurements.py
calibration/measurement/deepseek-r1-distill-llama-70b/: maxabs_measure_g2.json  maxabs_quant_g2.json
calibration/measurement/deepseek-r1-distill-llama-70b/g2/: inc_output_hooks_maxabs_0_2.json  inc_output_hooks_maxabs_0_2.npz  inc_output_hooks_maxabs_0_4.json  inc_output_hooks_maxabs_0_4.npz  inc_output_hooks_maxabs_1_2.json  inc_output_hooks_maxabs_1_2.npz  inc_output_hooks_maxabs_1_4.json  inc_output_hooks_maxabs_1_4.npz  inc_output_hooks_maxabs_2_4.json  inc_output_hooks_maxabs_2_4.npz  inc_output_hooks_maxabs_3_4.json  inc_output_hooks_maxabs_3_4.npz  inc_output_hooks_maxabs_MAXABS_HW_0_2.json  inc_output_hooks_maxabs_MAXABS_HW_0_2.npz  inc_output_hooks_maxabs_MAXABS_HW_0_4.json  inc_output_hooks_maxabs_MAXABS_HW_0_4.npz  inc_output_hooks_maxabs_MAXABS_HW_1_2.json  inc_output_hooks_maxabs_MAXABS_HW_1_2.npz  inc_output_hooks_maxabs_MAXABS_HW_1_4.json  inc_output_hooks_maxabs_MAXABS_HW_1_4.npz  inc_output_hooks_maxabs_MAXABS_HW_2_4.json  inc_output_hooks_maxabs_MAXABS_HW_2_4.npz  inc_output_hooks_maxabs_MAXABS_HW_3_4.json  inc_output_hooks_maxabs_MAXABS_HW_3_4.npz
calibration/quant_config/: inc_measure_config.json
calibration/template/: mistral_mixtral.jinja
calibration/vlm-calibration/: README.md  calibrate_model.sh  detect-device.py  requirements.txt  unify_measurements.py  vision_language_multi_image.py  vision_lm_eval.py
docs/: .nav.yml  README.md
docs/api/: README.md
docs/configuration/: README.md  env_vars.md  long_context.md  model_calibration.md  multi_node.md  optimization.md  pipeline_parallelism.md
docs/design/: plugin_system.md
docs/dev_guide/: README.md  ci-failures.md  profiling.md
docs/features/: bucketing_mechanism.md  compatibility_matrix.md  supported_features.md
docs/features/quantization/: README.md  gptqmodel.md  inc.md
docs/getting_started/: installation.md  quickstart.md
docs/models/: validated_models.md
docs/user_guide/: README.md  faq.md  metrics.md  troubleshooting.md  v1_guide.md
examples/: run_tests.sh  run_tests_v1.sh  test_plugin.py
quantization_config/: README.md  maxabs_quant_dynamic_quantization.json
scripts/: convert_weights_for_gaudi2.py
scripts/deepseek_gaudi2/: convert.py
sglang_calibration/: README.md  calibrate_model_sglang.sh  step-1-prepare-calibration-dataset.py  step-2-measure-scales.py  step-3-postprocess-measure.py  step-4-quantize-scales.py
tests/: test_bucketing.py  test_flags.py
tests/models/language/generation/: conftest.py  inc_unit_scale_quant.json  inc_unit_scale_quant_without_fp8kv.json  test_common.py
tools/: mypy.sh
vllm_hpu/: __init__.py  _version.py  envs.py  platform.py  utils.py
vllm_hpu/attention/backends/: hpu_attn.py
vllm_hpu/attention/ops/: hpu_paged_attn.py
vllm_hpu/distributed/device_communicators/: hpu_communicator.py
vllm_hpu/extension/: __init__.py  environment.py  features.py  ops.py  profiler.py  runtime.py  test_bucketing.py  test_flags.py  utils.py
vllm_hpu/extension/bucketing/: common.py  exponential.py  linear.py
vllm_hpu/ops/: __init__.py  hpu_compressed_tensors.py  hpu_fp8.py  hpu_fused_moe.py  hpu_layernorm.py  hpu_lora.py  hpu_rotary_embedding.py  hpu_vocab_parallel_embedding.py
vllm_hpu/v1/worker/: hpu_input_batch.py  hpu_model_runner.py  hpu_worker.py
vllm_hpu/worker/: hpu_enc_dec_model_runner.py  hpu_model_runner.py  hpu_pooling_model_runner.py  hpu_worker.py
vllm_hpu_extension/: awq_hpu.py  bucketing.py  cache_ops.py  capabilities.py  config.py  debug.py  defragmentation.py  environment.py  features.py  flags.py  gptq_hpu.py  kernels.py  logger.py  ops.py  profiler.py  punica_hpu.py  rotary_embed.py  runtime.py  scales.py  test_bucketing.py  test_capabilities.py  test_exponential_bucketing.py  test_flags.py  utils.py  validation.py
vllm_hpu_extension/bucketing/: __init__.py  common.py  exponential.py  linear.py
vllm_hpu_extension/internal/: test_vllm.py
vllm_hpu_extension/internal/test_jsons/: test_dynamic_quant.json  test_hw_quant.json  test_measure.json  test_pow2_quant.json
(+16 files in other folders)
