[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "vllm-hpu-extension"
dynamic = ["version"]
description = "HPU extension package for vLLM"
authors = [
    {name = "Tomasz Zielinski", email = "tzielinski@habana.ai"},
    {name = "Konrad Zawora", email = "kzawora@habana.ai"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "Apache 2.0"}

[tool.setuptools_scm]


[tool.ruff]
# Allow lines to be as long as 80.
line-length = 80

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    # "I",
    "G",
]
ignore = [
    # star imports
    "F405", "F403",
    # lambda expression assignment
    "E731",
    # Loop control variable not used within loop body
    "B007",
    # f-string format
    "UP032",
    # Can remove once 3.10+ is the minimum Python version
    "UP007",
]

[tool.mypy]
plugins = ['pydantic.mypy']
ignore_missing_imports = true
check_untyped_defs = true
follow_imports = "silent"

# After fixing type errors resulting from follow_imports: "skip" -> "silent",
# move the directory here and remove it from tools/mypy.sh
files = [
    "vllm_hpu_extension/*.py",
]


[tool.codespell]
ignore-words-list = "dout, te, indicies, subtile, ElementE"

[tool.isort]
use_parentheses = true
skip_gitignore = true

[tool.pymarkdown]
plugins.md004.style = "sublist" # ul-style
plugins.md029.enabled = false 
plugins.md031.enabled = false  
plugins.md013.enabled = false # line-length
plugins.md041.enabled = false # first-line-h1
plugins.md033.enabled = false # inline-html
plugins.md024.allow_different_nesting = true # no-duplicate-headers